# hit_exo_humenv

./: .gitignore  README.md  docs_amass_walking_data.md  eval.sh  eval_latent_z.sh  pyproject.toml  run.sh  run_baseline.sh  run_latent_z.sh  run_mocap_track.sh  show_amass_kit_stairs_playlist.sh  show_mocap_track.sh  show_mocap_track_updown_stairs.sh  test.sh  test_latent_z.sh  test_mocap_track.sh  test_mocap_track_updown_stairs.sh  train.sh  train_eval_sweep.sh  train_knee_exo_updown_stairs_on_compensation.sh  train_latent_z.sh  train_mocap_track.sh  train_mocap_track_updown_stairs.sh  train_stair_compensation_updown_stairs.sh
config/: latent_z.json
hit_exo_humenv/: __init__.py  latent_z_config.py  s1_policy.py
scripts/: __init__.py  amass_walking_pipeline.py  analyze_assist_power.py  build_kimodo_stair_foot_constraints.py  eval_latent_z_power.py  eval_mjlab_knee_exo.py  eval_mjlab_stair_mocap_track.py  generate_kimodo_stair_pseudomocap.py  kimodo_g1_root_to_humenv_pseudomocap.py  lock_humenv_support_feet.py  print_latent_z_shell_config.py  profile_latent_z_collection.py  rotate_humenv_root_yaw.py  run_mjlab_knee_exo_mocap_track_viewer.py  run_mjlab_knee_exo_viewer.py  run_s1_mocap_track_visual.py  select_s1_mocap_gait_latent.py  show_mocap_kinematic.py  show_mocap_playlist_kinematic.py  smoke_humenv_knee_exo.py  summarize_mjlab_training.py  sweep_stair_assist.py  test_mjlab_viewer.py  train_eval_sweep.py  train_mjlab_knee_exo.py  train_mjlab_knee_exo_mocap_track.py  write_latent_z_power_report.py
tests/: test_assist_power_analysis.py  test_humenv_knee_exo.py  (+3 more)
(+7 files in other folders)
